move page list hiding to CSS

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -480,7 +480,8 @@ div.center:not(.ad-cnt) {
 /* Index */
 :root.index-loading .navLinks,
 :root.index-loading .board,
-:root.index-loading .pagelist {
+:root.index-loading .pagelist,
+:root.thread .pagelist {
   display: none;
 }
 #index-search {
