disable this piece of CSS entirely for now

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -78,9 +78,9 @@ hr {
 .board > hr:last-of-type {
   border-top-color: transparent !important;
 }
-div.navLinks {
+/*div.navLinks {
   margin-bottom: -10px !important;
-}
+}*/
 .ad-plea {
   display: none;
 }
