--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -810,7 +810,7 @@ span.hide-announcement {
 :root.hide-original-post-form #postForm,
 :root.hide-original-post-form .postingMode,
 :root.hide-original-post-form #togglePostForm,
-#qr.autohide:not(.has-focus):not(:hover) > form,
+#qr.autohide:not(.focus):not(:hover) > form,
 .thread #qr select[data-name=thread],
 #file-n-submit:not(.has-file) #qr-filerm {
   display: none;
