--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -2020,7 +2020,8 @@ a:only-of-type > .remove {
 .hide-ads .topad,
 .hide-ads .middlead,
 .hide-ads .bottomad,
-.hide-ads .ad-plea {
+.hide-ads .ad-plea,
+.hide-ads .center {
   display: none;
 }
 .shrink-ads .topad a img,
