--- a/css/style.css
+++ b/css/style.css
@@ -725,8 +725,7 @@ a.hide-announcement {
 
 /* QR */
 :root.hide-original-post-form #postForm,
-:root.hide-original-post-form .postingMode,
-:root.hide-original-post-form #togglePostForm,
+:root.hide-original-post-form #togglePostFormLink,
 #qr.autohide:not(.has-focus):not(:hover) > form {
   display: none;
 }
