--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -498,8 +498,10 @@ div.center:not(.ad-cnt) {
 .summary {
   text-decoration: none;
 }
-.index #returnlink,
-.index #bottomlink,
+.index .returnlink,
+.index .bottomlink,
+.index .navLinksBot,
+.index .navLinksBot + hr,
 .thread #index-last-refresh,
 .thread #index-search-clear,
 .thread #index-search {
