--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -471,8 +471,7 @@ div.center:not(.ad-cnt) {
 /* Index */
 :root.index-loading .navLinks,
 :root.index-loading .board,
-:root.index-loading .pagelist,
-:root.thread .pagelist {
+:root.index-loading .pagelist {
   display: none;
 }
 #index-search {
@@ -497,15 +496,6 @@ div.center:not(.ad-cnt) {
 }
 .summary {
   text-decoration: none;
-}
-.index .returnlink,
-.index .bottomlink,
-.index .navLinksBot,
-.index .navLinksBot + hr,
-.thread #index-last-refresh,
-.thread #index-search-clear,
-.thread #index-search {
-  display: none;
 }
 
 /* Announcement Hiding */
