--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -845,9 +845,9 @@ span.hide-announcement {
   font-size: 10pt;
 }
 .persona {
-  width: 248px;
-  max-width: 100%;
-  min-width: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 #dump-button {
   width: 10%;
@@ -865,10 +865,9 @@ span.hide-announcement {
   padding: 1px 0px 2px;
   opacity: 0.6;
 }
-.persona .field:not(#dump) {
-  width: 95px;
-  min-width: 33.3%;
-  max-width: 33.3%;
+.persona .field {
+  flex: 1;
+  width: 0;
 }
 #qr textarea.field {
   height: 14.8em;
