Bring back proper box model for the catalog.
Effectively reverts:
- 3bc3aabc05347945fb1497e9f2e724e008436d03
- eb26a09ce575b75f53d7c5477aee9ecfe37a9b04

--- a/css/style.css
+++ b/css/style.css
@@ -396,16 +396,16 @@ body > .desktop:not(hr):not(.navLinks):not(#boardNavDesktop):not(#boardNavDeskto
   text-decoration: none;
 }
 .catalog-mode .board {
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .catalog-thread {
   display: inline-flex;
-  text-align: left;
   flex-direction: column;
   align-items: center;
   margin: 0 2px 5px;
   word-break: break-word;
-  vertical-align: top;
 }
 .catalog-small .catalog-thread {
   width: 165px;
