use CSS to hide <hr>s following hidden threads

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -780,6 +780,9 @@ span.hide-announcement {
 .stub input {
   display: inline-block;
 }
+.thread[hidden] + hr {
+  display: none;
+}
 
 /* QR */
 :root.hide-original-post-form #postForm,
