--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -193,7 +193,7 @@ body > hr {
 }
 .thread-stats {
   flex-shrink: 0;
-  cursor: help;
+  cursor: help !important;
   font-size: 10px;
   font-weight: 700;
   margin-top: 2px;
@@ -230,7 +230,7 @@ a {
 body,
 html {
   min-height: 100%;
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
 }
 body {
   outline: none;
@@ -262,7 +262,7 @@ body.unscroll {
   position: fixed;
   top: 0;
   bottom: 0;
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   display: block;
   z-index: 0;
 }
@@ -502,7 +502,7 @@ nav a,
   color: #fff;
 }
 .message {
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   padding: 6px 20px;
   max-height: 200px;
   width: 100%;
@@ -511,11 +511,11 @@ nav a,
 /* Shortcuts */
 #shortcuts {
   position: fixed;
-  display: <%= flex %>;
+  display: flex:;
   top: 0;
   padding: 1px;
   z-index: 16;
-  <%= flex %>-direction: row;
+  flex:-direction: row;
   max-height: 1.1em;
   overflow: visible;
 }
@@ -528,7 +528,7 @@ nav a,
 #a-icons,
 #a-stats {
   <%= order %>: 0;
-  display: <%= flex %>;
+  display: flex:;
 }
 #a-icons {
   <%= order %>: 10;
@@ -546,7 +546,7 @@ nav a,
   <%= align %>-self: flex-end;
 }
 .icon-orientation-vertical #a-icons {
-  <%= flex %>-direction: column;
+  flex:-direction: column;
   height: 200px;
 }
 .icon-orientation-horizontal #a-stats {
@@ -555,11 +555,11 @@ nav a,
 .icon-orientation-horizontal #a-stats,
 .icon-orientation-horizontal #a-icons,
 .sidebar-location-left #shortcuts {
-  <%= flex %>-direction: row-reverse;
+  flex:-direction: row-reverse;
 }
 .icon-orientation-horizontal.sidebar-location-left #a-stats,
 .icon-orientation-horizontal.sidebar-location-left #a-icons {
-  <%= flex %>-direction: row;
+  flex:-direction: row;
 }
 #thread-stats {
   <%= order %>: 0;
@@ -1013,7 +1013,7 @@ nav a,
   position: fixed;
   bottom: 0;
   right: 0;
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   height: 1.6em;
   width: 1.4em;
   text-align: center;
@@ -1032,7 +1032,7 @@ nav a,
   color: transparent;
   overflow-x: hidden;
   overflow-y: auto;
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   width: 248px;
 }
 .sidebar-large #boardNavDesktopFoot {
@@ -1098,7 +1098,7 @@ nav a,
   overflow: hidden;
 }
 .slideout-watcher #thread-watcher {
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   width: 248px;
 }
 .slideout-watcher.sidebar-large #boardNavDesktopFoot {
@@ -1168,7 +1168,7 @@ nav a,
   margin: 0;
 }
 .announcements-slideout #globalMessage {
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   display: none;
 }
 .announcements-slideout #so-psa:hover #globalMessage {
@@ -1258,14 +1258,14 @@ div.post div.postInfo {
   outline: none;
 }
 .reply.post {
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   display: inline-block;
 }
 .replyContainer {
-  display: <%= flex %>;
+  display: flex:;
 }
 .fit-width-replies .reply.post {
-  <%= flex %>: 1 0;
+  flex:: 1 0;
 }
 .fit-width-replies .expanded-image .reply.post,
 .fit-width-replies .hasInline .reply.post {
@@ -1292,7 +1292,7 @@ a.useremail:last-of-type {
   vertical-align: bottom;
 }
 .op-background .op.post {
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
 }
 <% if (type === 'userscript') { %>
 /* Force Reply Break */
@@ -1434,7 +1434,7 @@ a.useremail:last-of-type {
 }
 /* Code */
 .prettyprint {
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   font-family: monospace;
   display: inline-block;
   margin: 0 auto .1em 0;
@@ -1756,12 +1756,12 @@ input:checked + .rice {
   border-style: solid;
 }
 .persona {
-  display: <%= flex %>;
-  <%= flex %>-direction: column;
+  display: flex:;
+  flex:-direction: column;
   <%= align %>-items: stretch;
 }
 .compact-post-form-inputs .persona {
-  <%= flex %>-direction: row;
+  flex:-direction: row;
 }
 #qr textarea.field {
   height: 11.6em;
@@ -1771,11 +1771,11 @@ input:checked + .rice {
   height: 6em;
 }
 .compact-post-form-inputs .persona input.field {
-  <%= flex %>: 1 1;
+  flex:: 1 1;
   margin: 0 0 0 1px;
 }
 .compact-post-form-inputs .persona input:focus {
-  <%= flex %>: 3 1;
+  flex:: 3 1;
 }
 .compact-post-form-inputs .persona input.field:first-child {
   margin: 0;
@@ -1823,13 +1823,13 @@ input:checked + .rice {
 .selectrice,
 button,
 input:not([type=radio]) {
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   height: 1.6em;
   margin: 1px 0 0;
   vertical-align: bottom;
   padding: 0 1px;
   outline: none;
-  transition: color .25s, border-color .25s, <%= flex %> .25s;
+  transition: color .25s, border-color .25s, flex: .25s;
 }
 .selectrice {
   padding-right: 1.6em;
@@ -1838,7 +1838,7 @@ input:not([type=radio]) {
   min-width: 100%;
 }
 #file-n-submit {
-  display: <%= flex %>
+  display: flex:
 }
 #qr [type='submit'] {
   width: 60px;
@@ -1887,11 +1887,11 @@ input:not([type=radio]) {
   margin-right: 3px;
 }
 #qr-filename-container {
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   display: inline-block;
   position: relative;
   margin-right: 1px;
-  <%= flex %>: 1 1;
+  flex:: 1 1;
   overflow: hidden;
   padding: 2px 1px 0;
 }
@@ -1936,7 +1936,7 @@ input:not([type=radio]) {
   overflow-x: auto;
 }
 .qr-preview {
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   counter-increment: thumbnails;
   cursor: move;
   display: inline-block;
@@ -2322,7 +2322,7 @@ article li {
 .export-button,
 .mascotname,
 #mascot-options {
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   padding: 0;
   width: 100%;
 }
@@ -2430,7 +2430,7 @@ article li {
 }
 #mascotConf .option,
 #mascotConf .optionlabel {
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   width: 50%;
   display: inline-block;
   vertical-align: middle;
@@ -2451,21 +2451,21 @@ article li {
   left: 0;
   right: 0;
   z-index: 26;
-  display: <%= flex %>;
-  <%= flex %>-direction: row;
+  display: flex:;
+  flex:-direction: row;
   background: rgba(0,0,0,0.7);
 }
 .gal-viewport {
-  display: <%= flex %>;
+  display: flex:;
   <%= align %>-items: stretch;
-  <%= flex %>-direction: row;
-  <%= flex %>: 1 1 auto;
+  flex:-direction: row;
+  flex:: 1 1 auto;
 }
 .gal-thumbnails {
-  <%= flex %>: 0 0 150px;
+  flex:: 0 0 150px;
   overflow-y: auto;
-  display: <%= flex %>;
-  <%= flex %>-direction: column;
+  display: flex:;
+  flex:-direction: column;
   <%= align %>-items: stretch;
   text-align: center;
   background: rgba(0,0,0,.5);
@@ -2481,7 +2481,7 @@ article li {
   width: auto;
 }
 .gal-thumb {
-  <%= flex %>: 0 0 auto;
+  flex:: 0 0 auto;
   padding: 3px;
   line-height: 0;
   transition: background .2s linear;
@@ -2499,7 +2499,7 @@ article li {
 }
 .gal-prev,
 .gal-next {
-  <%= flex %>: 0 0 20px;
+  flex:: 0 0 20px;
   position: relative;
   cursor: pointer;
   opacity: 0.7;
@@ -2529,8 +2529,8 @@ article li {
 }
 .gal-image {
   order: 1;
-  <%= flex %>: 1 0 auto;
-  display: <%= flex %>;
+  flex:: 1 0 auto;
+  display: flex:;
   <%= align %>-items: flex-start;
   <%= justify %>: space-around;
   overflow: auto;
@@ -2676,7 +2676,7 @@ article li {
   text-align: center;
 }
 #doc {
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   margin: 10px auto;
   width: 1006px;
   padding: 2px;
@@ -2703,7 +2703,7 @@ article li {
   right: 0 !important;
 }
 #boards .column {
-  <%= sizing %>: border-box;
+  box-sizing: border-box;
   display: inline-block;
   width: 180px;
   text-align: left;
